<resources>
    <string name="set_point_deg">Set Point (Deg)</string>
    <string name="tilt_p">Tilt P</string>
    <string name="tilt_d">Tilt D</string>
    <string name="speed_p">Wheel Speed P</string>
    <string name="maximum_tilt_angle_forward">Maximum Forward Tilt Angle</string>
    <string name="maximum_tilt_angle_backward">Maximum Backward Tilt Angle</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_button_show">Show QR Code</string>
    <string name="qr_code_content">qr_code</string>
    <string name="back_button">Back</string>
    <string name="robot_not_properly_attached_please_reattach_and_press_confirm">Robot not properly attached. Please reattach and press confirm</string>
    <string name="confirm">Confirm</string>
</resources>
