<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.oist.abcvlib.fragments.PidGuiFragament"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewSetPoint"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/set_point_deg"
        android:textAlignment="center" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarSetPoint"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stepSize="0.1"
        android:value="1.4"
        android:valueFrom="-10.0"
        android:valueTo="10.0" />

    <TextView
        android:id="@+id/textViewTiltP"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/tilt_p" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stepSize="0.001"
        android:value="-0.175"
        android:valueFrom="-1.0"
        android:valueTo="0.0" />

    <TextView
        android:id="@+id/textViewTiltD"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/tilt_d" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltD"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stepSize="0.0001"
        android:value="0.007"
        android:valueFrom="0.0"
        android:valueTo="0.1" />

    <TextView
        android:id="@+id/textViewWheelSpeedP"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/speed_p" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarWheelSpeedP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stepSize="0.00001"
        android:value="0.002"
        android:valueFrom="0.0"
        android:valueTo="0.01" />

    <TextView
        android:id="@+id/textViewMaxTiltFwd"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/maximum_tilt_angle_forward" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarMaxTiltFwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stepSize="0.1"
        android:value="20.0"
        android:valueFrom="0.0"
        android:valueTo="30.0" />

    <TextView
        android:id="@+id/textViewMaxTiltBwd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/maximum_tilt_angle_backward" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarMaxTiltBwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:stepSize="0.1"
        android:value="15.0"
        android:valueFrom="0.0"
        android:valueTo="20.0" />
</LinearLayout>
